cros: Don't attempt to focus OOBE dialog if it is not showing

This prevents an invalid request while in the lock screen, since the OOBE
dialog does not exist.

Bug: 905752
Change-Id: Ie1f820877ea659c9cbfa1e260c2e6a49776e46c9
Reviewed-on: https://chromium-review.googlesource.com/c/1338111
Reviewed-by: Michael Wasserman <msw@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#608903}
Former-commit-id: 805a7dfe713fff624abdb319264ac446d50d7f89